--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -11,6 +11,11 @@ Click==7.0
 pytest==4.6.5
 pytest-runner==5.1
 
+# format
+yapf==0.28.0
+pylint==2.4.4
+
+
 nltk==3.4.5
 numpy==1.17.4
 scikit-learn==0.21.3
