--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -10,10 +10,5 @@ twine==1.14.0
 Click==7.0
 pytest==4.6.5
 pytest-runner==5.1
-
-nltk==3.4.5
-numpy==1.17.4
-scikit-learn==0.21.3
-torch==1.3.1
-ipython==7.9.0
-matplotlib==3.1.2
+pylint==2.4.4
+yapf==0.28.0
